build_log_errors.txt
    Checking rust_bmp v0.1.0 (D:\ASUNA\Tools\Visual_studio\rust_bmp)
error[E0433]: failed to resolve: could not find `WindowEvent` in `slint`
   --> src\main.rs:126:23
    |
126 |         if let slint::WindowEvent::DroppedFile(path) = event {
    |                       ^^^^^^^^^^^ could not find `WindowEvent` in `slint`
    |
help: consider importing this enum
    |
  1 + use slint::platform::WindowEvent;
    |
help: if you import `WindowEvent`, refer to it directly
    |
126 -         if let slint::WindowEvent::DroppedFile(path) = event {
126 +         if let WindowEvent::DroppedFile(path) = event {
    |

error[E0599]: no method named `on_event` found for reference `&Window` in the current scope
   --> src\main.rs:125:17
    |
125 |     ui.window().on_event(move |event| {
    |     ------------^^^^^^^^ method not found in `&Window`

Some errors have detailed explanations: E0433, E0599.
For more information about an error, try `rustc --explain E0433`.
error: could not compile `rust_bmp` (bin "rust_bmp") due to 2 previous errors
